src/app/dashboard/dark.module.css
@import url('https://fonts.googleapis.com/css2?family=Bungee+Shade&family=Cutive&family=Kanit:wght@300;400&family=Poppins:wght@400;600&family=Roboto+Slab&family=Ubuntu:wght@400;500&display=swap');

.main {
  display: flex;
  flex-direction: row;
  width: 100%;
  height: 100%;
  text-decoration: none;
}

/* .anchor{
  text-decoration: none;
  color: white;
} */
.leftpart {
  display: flex;
  /* background-color: rgb(5, 39, 69); */
  background-color: #202123;
  /* width: 18%; */
  height: 100vh;
  position: sticky;
  left: 0px;
  top: 0px;
  flex-direction: column;
  border: 1px solid black;
  justify-content: space-between;
}


.upper {
  /* border: 1px solid red; */
  margin: 1rem;
  display: flex;
  padding: 0.7rem;
  padding-bottom: 0.4rem;
  gap: 1rem;
  border-radius: 5px;
  box-shadow: -1.2px 1px 2px #000a0f, 0.4px -0.4px 1px #000a0f;
}

.logo_name {
  color: white;
  width: 11rem;
  font-weight: bolder;
  padding-top: 0.1rem;
  background: linear-gradient(90deg, rgb(226, 246, 8), rgb(252, 181, 48), rgb(226, 66, 13));
  -webkit-background-clip: text;
  -webkit-text-fill-color: transparent;
}

.logo_icon img {
  width: 2.10rem;
}


.middle {
  display: flex;
  flex-direction: column;
  /* border: 1px solid red; */
  margin: 1rem;
  gap: 1.5rem;
}

.child {
  /* border: 1px solid green; */
  /* padding-left: 0.6rem;
  padding-bottom: 0.3rem;
  padding-top: 0.3rem; */
  padding: 0.7rem;
  display: flex;
  color: white;
  gap: 2rem;
  box-shadow: -1.2px 1px 2px #000a0f, 0.2px -0.2px 1px #000a0f;
}

.child_icons {
  font-size: xx-large;
}

.child_link {
  color: white;
  margin-top: 0.2rem;
}

.child_icons:hover,
.child_link:hover {
  color: rgb(205, 199, 199);
}


.lower {
  display: flex;
  margin: 1rem;
  gap: 2rem;
  /* border: 1px solid red; */
  padding: 0.7rem;
  box-shadow: -1.2px 1px 2px #000a0f, 0.2px -0.2px 1px #000a0f;
}

.user_logo{
  /* border: 1px solid red; */
  height: 50px;
  /* border-radius: 50%; */
}

.user_logo img {
  border-radius: 50%;
  height: 50px;
  width: 64px;
}

.user_info {
  display: flex;
  flex-direction: column;
  gap: 0.5rem;
}

.user_info span {
  color: white;
}

.user_name span{
    background: linear-gradient(90deg, rgb(226, 246, 8), rgb(252, 181, 48), rgb(226, 66, 13));
  -webkit-background-clip: text;
  -webkit-text-fill-color: transparent;
}

.log_out {
color: yellow;
  cursor: pointer;
}

.log_out span:hover {
  color: rgb(240, 201, 4);
}




/*.............................................................. rightside ............................................................*/
/* CSS */
.button26 {
  appearance: button;
  background-color: rgb(255, 229, 82);
  border: 1px solid black;
  border-radius: 4px;
  box-sizing: border-box;
  color: black;
  font-weight: 500;
  cursor: pointer;
  font-family: Graphik, -apple-system, system-ui, "Segoe UI", Roboto, Oxygen, Ubuntu, Cantarell, "Fira Sans", "Droid Sans", "Helvetica Neue", sans-serif;
  font-size: 15px;
  line-height: 1.15;
  overflow: visible;
  padding: 12px 16px;
  position: relative;
  text-align: center;
  text-transform: none;
  transition: all 80ms ease-in-out;
  user-select: none;
  -webkit-user-select: none;
  touch-action: manipulation;
  width: fit-content;
}

.button26:disabled {
  opacity: .5;
}

.button26:focus {
  outline: 0;
}

.button26:hover {
  background-color: rgb(255, 183, 0);
  border-color: #0c2669;
}

.button26:active {
  background-color: #0039D7;
  border-color: #0039D7;
}

.anchor{
  color: black;
}

.button27 {
  appearance: button;
  background-color: #03aa38;
  border: 1px solid #03aa38;
  border-radius: 4px;
  box-sizing: border-box;
  color: #FFFFFF;
  cursor: pointer;
  font-family: Graphik, -apple-system, system-ui, "Segoe UI", Roboto, Oxygen, Ubuntu, Cantarell, "Fira Sans", "Droid Sans", "Helvetica Neue", sans-serif;
  font-size: 14px;
  line-height: 1.15;
  overflow: visible;
  padding: 12px 16px;
  position: relative;
  text-align: center;
  text-transform: none;
  transition: all 80ms ease-in-out;
  user-select: none;
  -webkit-user-select: none;
  touch-action: manipulation;
  width: fit-content;
}

.button27:disabled {
  opacity: .5;
}

.button27:focus {
  outline: 0;
}

.button27:hover {
  background-color: #0e5223;
  border-color: #0e5223;
}

.button27:active {
  background-color: #03aa38;
  border-color: #03aa38;
}

.rightpart {
  width: 82%;
  /* border: 1px solid black; */
  height: 100%;
}

.iconGrid{
  border: 2px solid black;
  height: 45%;
  width: 15%;
  display: flex;
  flex-direction: column;
  justify-content: center;
  text-align: center;
  margin: auto;
  border-radius: 11px;
}
.iconGrid svg{
  font-size: 1.35rem;
  margin: auto;
}
.iconGrid{
  border-color: rgb(198, 195, 195);
  color: white;
}
.iconGrid:hover{
  border-color: black;
  cursor: pointer;
  color: black;
}
.header {
  /* border: 1px solid black; */
  box-shadow: rgba(0, 0, 0, 0.1) 0px 4px 6px -1px, rgba(0, 0, 0, 0.06) 0px 2px 4px -1px;
  ;
  height: 75px;
  width: 100%;
  background-color: #202123;
  display: flex;
  flex-direction: row;
  justify-content: space-between;
}
.outer{
  height: 100vh;
  position: relative;
  background-color: #343541;
}
.content {
  box-sizing: border-box;
  display: flex;
  flex-direction: column;
  justify-content: space-around;
  margin-left: 30px;
  font-size: 1.5rem;
  color: whitesmoke;
  font-weight: 650;
  margin-top: 1rem;
}

.content:hover {
  color: rgb(72, 67, 67);
}

.buttons {
  width: 25%;
  display: flex;
  flex-direction: row;
  justify-content: space-around;
}

.button26,
.button27 {
  height: 60%;
  margin-top: auto;
  margin-bottom: auto;
}

.sorting {
  display: block;
  width: 10%;
  color: #fcfcfc;
  text-align: center;
  margin-right: 15px;
  border-radius: 15px;
  border: 1px solid rgb(252, 252, 255);
  font-family: 'Bungee Shade', cursive;
  font-family: 'Cutive', serif;
  font-family: 'Kanit', sans-serif;
  font-family: 'Poppins', sans-serif;
  background-color: (199, 231, 244);
}
.anchor{
  color: black;
}
.selector{
  display: flex;
  flex-direction: row;
  padding: 20px;
}
.sorting:hover {
  cursor: pointer;
  color: rgb(183, 180, 180);
  border: 1px solid rgb(183, 180, 180);
}

.formscontainer {
  
}

.container {
  display: flex;
  flex-direction: row;
  flex-wrap: wrap;
}

.logo h1 {
  background: linear-gradient(90deg, gold, orange, rgb(250, 58, 5));
  -webkit-background-clip: text;
  -webkit-text-fill-color: transparent;
}

.sidelinks {
  font-family: 'Bungee Shade', cursive;
  font-family: 'Cutive', serif;
  font-family: 'Kanit', sans-serif;
  font-family: 'Poppins', sans-serif;
}

